--- a/src/pages/species/species.html
+++ b/src/pages/species/species.html
@@ -3,12 +3,20 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>{{selectedSpeciesId}}</ion-title>
+    <ion-title>Les espèces du Parc</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <h3>{{selectedSpeciesId}}</h3>
-
-
+  <ion-list>
+    <button class="item" ion-item *ngFor="let specie of species" (click)="goToDetails(specie)">
+      <div class="thumbnail">
+        <img src="http://localhost:8080/common/specie/{{specie.id}}/preview?format=THUMB" />
+      </div>
+      <div class="infos">
+        <span class="name">{{specie.name}}</span>
+        <span class="description">{{specie.description}}</span>
+      </div>
+    </button>
+  </ion-list>
 </ion-content>
