--- a/src/pages/animal-details/animal-details.html
+++ b/src/pages/animal-details/animal-details.html
@@ -10,6 +10,7 @@
 <ion-content padding>
   <img *ngIf="animalUrl" src="{{animalUrl}}"/>
   <h3>{{animal.name}}</h3>
+  <specie-summary *ngIf="animalUrl" [id]="animal.specieId"></specie-summary>
   <p>{{animal.age}}</p>
 
 </ion-content>
