--- a/src/pages/animals/animals.html
+++ b/src/pages/animals/animals.html
@@ -4,6 +4,7 @@
       <ion-icon name="menu"></ion-icon>
     </button>
     <ion-title>Les animaux du Parc</ion-title>
+    <auth></auth>
   </ion-navbar>
 </ion-header>
 
