--- a/src/pages/photos/photos.html
+++ b/src/pages/photos/photos.html
@@ -12,7 +12,7 @@
   <div class="item" ion-item *ngFor="let pic of pictures" >
     <picture-likable [id]="pic.id"></picture-likable>
     <div class="infos">
-      <span class="infos">{{pic.title}} - {{pic.creationDate | date:'shortDate'}} - {{pic.liked}}  <ion-icon name="heart"></ion-icon></span>
+      <span class="infos">{{pic.title}} - {{pic.creationDate | date:'shortDate'}} - <picture-liked [liked]="pic.liked" [id]="pic.id"></picture-liked></span>
       <div class="animals" *ngIf="pic.animalIds.length > 0">
           <animal-summary *ngFor="let animalId of pic.animalIds"
                 [id]="animalId">
