--- a/src/pages/photos/photos.html
+++ b/src/pages/photos/photos.html
@@ -25,4 +25,9 @@
       </div>
     </div>
   </div>
+  <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
+    <ion-infinite-scroll-content
+      loadingSpinner="bubbles"
+      loadingText="Chargement en cours..."></ion-infinite-scroll-content>
+  </ion-infinite-scroll>
 </ion-content>
