--- a/src/pages/specie-details/specie-details.html
+++ b/src/pages/specie-details/specie-details.html
@@ -4,6 +4,7 @@
       <ion-icon name="menu"></ion-icon>
     </button>
     <ion-title>{{specie.name}}</ion-title>
+    <auth></auth>
   </ion-navbar>
 </ion-header>
 
