--- a/src/pages/photos/photos.html
+++ b/src/pages/photos/photos.html
@@ -17,7 +17,5 @@
       loadingSpinner="bubbles"
       loadingText="Chargement en cours..."></ion-infinite-scroll-content>
   </ion-infinite-scroll>
-  <div class="upload">
-    <picture-uploader></picture-uploader>
-  </div>
+  <picture-uploader ion-fixed></picture-uploader>
 </ion-content>
