--- a/src/pages/animal-details/animal-details.html
+++ b/src/pages/animal-details/animal-details.html
@@ -9,7 +9,7 @@
 </ion-header>
 
 <ion-content padding>
-  <img *ngIf="animalUrl" src="{{animalUrl}}"/>
+  <img class="img" *ngIf="animalUrl" src="{{animalUrl}}"/>
   <h3>Nom : {{animal.name}}</h3>
   <p>Age : {{getAge(animal.birthYear)}} an(s)</p>
   <p><span class="label">Espèce : </span><specie-summary *ngIf="animalUrl" [id]="animal.specieId"></specie-summary></p>
