--- a/src/pages/specie-details/specie-details.html
+++ b/src/pages/specie-details/specie-details.html
@@ -9,7 +9,7 @@
 </ion-header>
 
 <ion-content padding>
-  <img *ngIf="specieUrl" src="{{specieUrl}}"/>
+  <img class="img" *ngIf="specieUrl" src="{{specieUrl}}"/>
   <h3>{{specie.name}}</h3>
   <p>{{specie.description}}</p>
   <p>{{specie.origin}}</p>
