--- a/src/pages/photos/photos.html
+++ b/src/pages/photos/photos.html
@@ -9,7 +9,7 @@
 </ion-header>
 
 <ion-content padding>
-  <div class="item" ion-item *ngFor="let pic of pictures" >
+  <div class="photos item" ion-item *ngFor="let pic of pictures" >
     <picture [picture]="pic"></picture>
   </div>
   <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
